# ants

./: README.md  main.py
c++/: CMakeLists.txt  ant.cpp  ant.h  arena.cpp  arena.h  compile_command.sh  constants.h  food_source.cpp  food_source.h  main.cpp  system_headers.h
